--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: "firebase_legal"
+    container_name: "firebase_base_app"
     working_dir: /app
     ports:
       - "4000:4000"
