fix creazione modifica utente

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ PORT=3000
 # Valori possibili: superuser, admin, operatore
 # Default: superuser (se non specificato)
 DEV_USER_ROLE=superuser
+# Firebase project IDs (impostare entrambi se vuoi overrideare il default)
+FIREBASE_PROJECT_ID=base-app-12108
+PUBLIC_FIREBASE_PROJECT_ID=base-app-12108
