--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     container_name: "firebase_base_app"
     working_dir: /app
+    stop_signal: SIGINT
+    stop_grace_period: 30s
     ports:
       - "4000:4000"
       - "3000:3000"
@@ -19,15 +21,10 @@ services:
       - .:/app
       - node_modules:/app/node_modules
       - functions_node_modules:/app/functions/node_modules
+      - ./emulator-data:/app/emulator-data
       - ./.firebase-credentials/config:/root/.config
       - ./.firebase-credentials/cache:/root/.cache
-    command: >
-      bash -lc "
-        set -euo pipefail
-        # Usa il projectId centralizzato (override con env FIREBASE_PROJECT_ID)
-        firebase emulators:start --import=./emulator-data --export-on-exit=./emulator-data --project=${FIREBASE_PROJECT_ID:-base-app-12108} &
-        npm run dev -- --host --port 3000
-       "
+    command: /app/scripts/start-emulators.sh
     environment:
       - FIREBASE_PROJECT_ID=base-app-12108
       # Esporta anche per il frontend; usa fallback per evitare stringhe vuote
