--- a/functions/package.json
+++ b/functions/package.json
@@ -9,43 +9,43 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
     "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "@oslojs/encoding": "^1.1.0",
+    "astro": "^5.1.5",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "cssesc": "^3.0.0",
     "devalue": "^5.2.0",
+    "encodeurl": "latest",
     "es-module-lexer": "^1.7.0",
+    "escape-html": "latest",
+    "etag": "latest",
     "firebase-admin": "^13.5.0",
-    "firebase-functions": "^7.0.0",
+    "firebase-functions": "^7.0.2",
     "googleapis": "^164.0.0",
     "html-escaper": "^2.0.2",
+    "http-errors": "latest",
     "mammoth": "^1.11.0",
+    "mime-types": "latest",
+    "mrmime": "latest",
     "nodemailer": "^7.0.9",
+    "on-finished": "latest",
     "pdf-parse": "^2.4.5",
     "pdfkit": "^0.17.2",
     "piccolore": "^0.1.3",
-    "simple-datatables": "^10.2.0",
-    "zod": "^3.25.0",
-    "astro": "^5.1.5",
-    "encodeurl": "latest",
-    "escape-html": "latest",
-    "etag": "latest",
-    "http-errors": "latest",
-    "mime-types": "latest",
-    "mrmime": "latest",
-    "on-finished": "latest",
     "range-parser": "latest",
     "server-destroy": "latest",
+    "simple-datatables": "^10.2.0",
     "statuses": "latest",
     "supports-color": "latest",
-    "unstorage": "latest"
+    "unstorage": "latest",
+    "zod": "^3.25.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
