--- a/functions/package.json
+++ b/functions/package.json
@@ -5,6 +5,7 @@
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
+    "test": "firebase emulators:exec --only firestore,auth \"mocha --timeout 10000 --exit test/**/*.test.js\"",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -14,7 +15,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "@your-project/shared": "workspace:*",
+    "@your-project/shared": "file:../shared",
     "firebase-admin": "^12.2.0",
     "firebase-functions": "^5.0.1",
     "zod": "^3.23.8"
@@ -22,7 +23,9 @@
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "mocha": "^10.4.0",
+    "chai": "^5.1.1"
   },
   "private": true
 }
