--- a/package.json
+++ b/package.json
@@ -1,28 +1,37 @@
 {
   "name": "base-app",
   "type": "module",
-  "version": "1.0.0",
-  "description": "Legal Assistant with Astro SSR",
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "npm run sync-factories && astro build && node bundle-dependencies.js && cd functions && npm install",
+    "build": "astro build",
     "preview": "astro preview",
-    "deploy": "npm run build && firebase deploy",
-    "deploy:hosting": "npm run build && firebase deploy --only hosting,functions:astroSSR",
-    "sync-factories": "node scripts/sync-entity-factories.cjs",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy:hosting": "firebase deploy --only hosting,functions:astroSSR",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=tests/unit",
+    "test:e2e": "cypress open"
   },
   "dependencies": {
-    "@astrojs/node": "^9.1.0",
-    "astro": "^5.1.5",
-    "firebase": "^12.7.0",
-    "firebase-admin": "^13.5.0",
-    "piccolore": "^0.1.3",
-    "simple-datatables": "^10.2.0"
+    "@astrojs/node": "^8.3.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.11.5",
+    "firebase": "^10.12.3",
+    "firebase-admin": "^12.2.0",
+    "firebase-functions": "^5.0.1",
+    "tailwindcss": "^3.4.4"
   },
+  "workspaces": [
+    "functions",
+    "shared"
+  ],
   "devDependencies": {
-    "@astrojs/check": "^0.9.4",
-    "typescript": "^5.7.2"
+    "@faker-js/faker": "^8.4.1",
+    "cypress": "^13.13.0",
+    "eslint-plugin-jest": "^28.6.0",
+    "jest": "^29.7.0",
+    "chai": "^4.3.7",
+    "firebase-functions-test": "^3.1.0"
   }
 }
