--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "deploy:hosting": "firebase deploy --only hosting,functions:astroSSR",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=tests/unit",
-    "test:e2e": "cypress open"
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "cypress:open": "CYPRESS_ELECTRON_FLAGS=\"--no-sandbox --disable-gpu --disable-dev-shm-usage --disable-features=VizDisplayCompositor --no-zygote\" ELECTRON_DISABLE_SANDBOX=1 xvfb-run -a --server-args=\"-screen 0 1280x720x24\" npx cypress open --browser electron",
+    "cypress:run": "CYPRESS_ELECTRON_FLAGS=\"--no-sandbox --disable-gpu --disable-dev-shm-usage --disable-features=VizDisplayCompositor --no-zygote\" ELECTRON_DISABLE_SANDBOX=1 xvfb-run -a --server-args=\"-screen 0 1280x720x24\" npx cypress run --browser electron"
   },
   "dependencies": {
     "@astrojs/node": "^8.3.2",
@@ -28,7 +31,7 @@
   ],
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "cypress": "^13.13.0",
+    "cypress": "^15.0.0",
     "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.7.0",
     "chai": "^4.3.7",
