--- a/functions/package.json
+++ b/functions/package.json
@@ -10,22 +10,23 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "20"
+    "node": "22"
   },
   "main": "index.js",
   "type": "module",
   "dependencies": {
     "@your-project/shared": "file:../shared",
     "firebase-admin": "^12.2.0",
-    "firebase-functions": "^5.0.1",
+    "firebase-functions": "^7.0.3",
+    "nodemailer": "^6.9.16",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "chai": "^5.1.1",
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.1.0",
-    "mocha": "^10.4.0",
-    "chai": "^5.1.1"
+    "mocha": "^10.4.0"
   },
   "private": true
 }
