--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,9 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@your-project/shared": "file:../shared",
+    "axios": "^1.7.9",
     "firebase-admin": "^12.2.0",
     "firebase-functions": "^7.0.3",
     "nodemailer": "^6.9.16",
