--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "cypress": "^15.0.0",
+    "cypress": "15.8.2",
     "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.7.0",
     "chai": "^4.3.7",
