--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "deploy:hosting": "firebase deploy --only hosting,functions:astroSSR",
+    "generate:entity": "node scripts/generate-entity-template.cjs",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=tests/unit",
     "test:e2e": "cypress run",
