aggiunto test coverage

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "generate:entity": "node scripts/generate-entity-template.cjs",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=tests/unit",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "test:coverage:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --testPathPattern=tests/unit",
+    "test:coverage:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --watch",
+    "test:coverage:html": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage && xdg-open coverage/lcov-report/index.html",
     "test:e2e": "cypress run",
     "test:e2e:open": "cypress open",
     "cypress:open": "CYPRESS_ELECTRON_FLAGS=\"--no-sandbox --disable-gpu --disable-dev-shm-usage --disable-features=VizDisplayCompositor --no-zygote\" ELECTRON_DISABLE_SANDBOX=1 xvfb-run -a --server-args=\"-screen 0 1280x720x24\" npx cypress open --browser electron",
