--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ PORT=3000
 # Valori possibili: superuser, admin, operatore
 # Default: superuser (se non specificato)
 DEV_USER_ROLE=superuser
-# Firebase project IDs (impostare entrambi se vuoi overrideare il default)
-FIREBASE_PROJECT_ID=base-app-12108
+
+# Firebase Client SDK (frontend)
 PUBLIC_FIREBASE_PROJECT_ID=base-app-12108
+PUBLIC_FIREBASE_API_KEY=AIzaSyD8Wqok8hADg9bipYln3KpQbQ99nHVI-4s
+PUBLIC_FIREBASE_APP_ID=1:261397129842:web:e465329890a1220ed6b0eb
+PUBLIC_FIREBASE_MESSAGING_SENDER_ID=261397129842
+PUBLIC_FIREBASE_AUTH_DOMAIN=base-app-12108.firebaseapp.com
+PUBLIC_FIREBASE_STORAGE_BUCKET=base-app-12108.firebasestorage.app
