--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,13 @@ services:
       - ./.firebase-credentials/cache:/root/.cache
     command: /app/scripts/start-emulators.sh
     environment:
-      - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID:-base-app-12108}
-      # Esporta anche per il frontend; usa fallback per evitare stringhe vuote
-      - PUBLIC_FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID:-base-app-12108}
+      - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
+      - PUBLIC_FIREBASE_PROJECT_ID=${PUBLIC_FIREBASE_PROJECT_ID}
+      - PUBLIC_FIREBASE_API_KEY=${PUBLIC_FIREBASE_API_KEY}
+      - PUBLIC_FIREBASE_APP_ID=${PUBLIC_FIREBASE_APP_ID}
+      - PUBLIC_FIREBASE_MESSAGING_SENDER_ID=${PUBLIC_FIREBASE_MESSAGING_SENDER_ID}
+      - PUBLIC_FIREBASE_AUTH_DOMAIN=${PUBLIC_FIREBASE_AUTH_DOMAIN}
+      - PUBLIC_FIREBASE_STORAGE_BUCKET=${PUBLIC_FIREBASE_STORAGE_BUCKET}
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
       - CHOKIDAR_INTERVAL=500
@@ -46,7 +50,8 @@ services:
     network_mode: "host"
     environment:
       - CYPRESS_BASE_URL=http://localhost:3000
-      - CYPRESS_FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID:-base-app-12108}
+      - CYPRESS_FIREBASE_PROJECT_ID=${PUBLIC_FIREBASE_PROJECT_ID}
+      - CYPRESS_FIREBASE_API_KEY=${PUBLIC_FIREBASE_API_KEY}
       - DISPLAY=:99
     volumes:
       - .:/e2e
