--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - WATCHPACK_POLLING=true
       - CHOKIDAR_INTERVAL=500
       # Ruolo utente per testing in DEV (superuser, admin, operatore)
-      - DEV_USER_ROLE=superuser
+      - DEV_USER_ROLE=${DEV_USER_ROLE}
   cypress-ui:
     build:
       context: .
