--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "test:e2e:with-build": "npm run build:packages && npm run test:e2e",
     "test:e2e": "cypress run",
     "test:e2e:open": "cypress open",
-    "test:e2e:permessi": "cypress run --spec \"cypress/e2e/permessi-*.cy.js\"",
+    "test:e2e:permessi": "cypress run --spec \"cypress/e2e/permessi/permessi-*.cy.js\"",
     "test:e2e:permessi:ui": "cypress open --e2e --browser chrome",
-    "test:e2e:permessi:headless": "npx cypress run --spec \"cypress/e2e/permessi-*.cy.js\" --browser electron --headless",
+    "test:e2e:permessi:headless": "npx cypress run --spec \"cypress/e2e/permessi/permessi-*.cy.js\" --browser electron --headless",
     "cypress:open": "CYPRESS_ELECTRON_FLAGS=\"--no-sandbox --disable-gpu --disable-dev-shm-usage --disable-features=VizDisplayCompositor --no-zygote\" ELECTRON_DISABLE_SANDBOX=1 xvfb-run -a --server-args=\"-screen 0 1280x720x24\" npx cypress open --browser electron",
     "cypress:run": "CYPRESS_ELECTRON_FLAGS=\"--no-sandbox --disable-gpu --disable-dev-shm-usage --disable-features=VizDisplayCompositor --no-zygote\" ELECTRON_DISABLE_SANDBOX=1 xvfb-run -a --server-args=\"-screen 0 1280x720x24\" npx cypress run --browser electron"
   },
